Intellij inspect code done