@@ -1,29 +1,25 @@
 package com.exercise.asaiDemo.service;
 
-import com.exercise.asaiDemo.controller.BillController;
 import com.exercise.asaiDemo.entity.Product;
 import com.exercise.asaiDemo.offer.BuyThreeApplesAndPayTwo;
 import com.exercise.asaiDemo.offer.OfferInterface;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 
 import java.util.Arrays;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.*;
-
 class BillServiceTest {
 
-    List<OfferInterface> offers = Arrays.asList(new BuyThreeApplesAndPayTwo());
+    final List<OfferInterface> offers = List.of(new BuyThreeApplesAndPayTwo());
 
     @Value("${active-offers}")
     final List<String> activeOffersCodes = Arrays.asList("0","1","2","3");
 
-    OfferService offerService = new OfferService(offers, activeOffersCodes);
+    final OfferService offerService = new OfferService(offers, activeOffersCodes);
 
-    BillService billService = new BillService(offerService) ;
+    final BillService billService = new BillService(offerService) ;
 
     @Test
     public void BillService_test() {
@@ -32,9 +28,9 @@ class BillServiceTest {
         Product product0 = new Product();
         product0.setName("ORANGE");
         product0.setQuantity(11);
-        product0.setPrice(Double.valueOf(10));
+        product0.setPrice(10.0);
 
-        List<Product> products = Arrays.asList(product0);
+        List<Product> products = List.of(product0);
 
         // when
 
